// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BibTeX Parser should parse Ignoring upper cases in German titles #456-export to an AST 1`] = `
Object {
  "children": Array [
    Object {
      "id": "Kaufmann1990",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 15,
          "offset": 470,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 64,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 30,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 34,
                  "line": 2,
                  "offset": 61,
                },
                "start": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 40,
                },
              },
              "value": "Kaufmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "booktitle",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 135,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 64,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 69,
                  "line": 3,
                  "offset": 132,
                },
                "start": Object {
                  "column": 16,
                  "line": 3,
                  "offset": 79,
                },
              },
              "value": "Sozialpolitik und Sozialstaat: Soziologische Analysen",
            },
          ],
        },
        Object {
          "key": "date",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 5,
              "offset": 152,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 135,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 4,
                  "offset": 149,
                },
                "start": Object {
                  "column": 11,
                  "line": 4,
                  "offset": 145,
                },
              },
              "value": "2002",
            },
          ],
        },
        Object {
          "key": "doi",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 191,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 152,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 37,
                  "line": 5,
                  "offset": 188,
                },
                "start": Object {
                  "column": 10,
                  "line": 5,
                  "offset": 161,
                },
              },
              "value": "10.1007/978-3-322-99962-7_7",
            },
          ],
        },
        Object {
          "key": "editor",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 7,
              "offset": 228,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 191,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 35,
                  "line": 6,
                  "offset": 225,
                },
                "start": Object {
                  "column": 13,
                  "line": 6,
                  "offset": 203,
                },
              },
              "value": "Kauffmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "langid",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 8,
              "offset": 249,
            },
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 228,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 7,
                  "offset": 246,
                },
                "start": Object {
                  "column": 13,
                  "line": 7,
                  "offset": 240,
                },
              },
              "value": "german",
            },
          ],
        },
        Object {
          "key": "origdate",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 9,
              "offset": 270,
            },
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 249,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 8,
                  "offset": 267,
                },
                "start": Object {
                  "column": 15,
                  "line": 8,
                  "offset": 263,
                },
              },
              "value": "1990",
            },
          ],
        },
        Object {
          "key": "pages",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 292,
            },
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 270,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 9,
                  "offset": 289,
                },
                "start": Object {
                  "column": 12,
                  "line": 9,
                  "offset": 281,
                },
              },
              "value": "145–160",
            },
          ],
        },
        Object {
          "key": "publisher",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 11,
              "offset": 346,
            },
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 292,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 52,
                  "line": 10,
                  "offset": 343,
                },
                "start": Object {
                  "column": 16,
                  "line": 10,
                  "offset": 307,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 51,
                      "line": 10,
                      "offset": 342,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 10,
                      "offset": 308,
                    },
                  },
                  "value": "VS Verlag für Sozialwissenschaften",
                },
              ],
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 12,
              "offset": 396,
            },
            "start": Object {
              "column": 1,
              "line": 11,
              "offset": 346,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 48,
                  "line": 11,
                  "offset": 393,
                },
                "start": Object {
                  "column": 12,
                  "line": 11,
                  "offset": 357,
                },
              },
              "value": "Sozialpolitik und Bevölkerungsprozeß",
            },
          ],
        },
        Object {
          "key": "url",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 13,
              "offset": 467,
            },
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 396,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 70,
                  "line": 12,
                  "offset": 465,
                },
                "start": Object {
                  "column": 10,
                  "line": 12,
                  "offset": 405,
                },
              },
              "value": "http://link.springer.com/chapter/10.1007/978-3-322-99962-7_7",
            },
          ],
        },
      ],
      "type": "incollection",
    },
    Object {
      "id": "Kaufmann1997",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 28,
          "offset": 958,
        },
        "start": Object {
          "column": 1,
          "line": 15,
          "offset": 470,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 17,
              "offset": 534,
            },
            "start": Object {
              "column": 3,
              "line": 16,
              "offset": 500,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 34,
                  "line": 16,
                  "offset": 531,
                },
                "start": Object {
                  "column": 13,
                  "line": 16,
                  "offset": 510,
                },
              },
              "value": "Kaufmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "booktitle",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 18,
              "offset": 605,
            },
            "start": Object {
              "column": 1,
              "line": 17,
              "offset": 534,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 69,
                  "line": 17,
                  "offset": 602,
                },
                "start": Object {
                  "column": 16,
                  "line": 17,
                  "offset": 549,
                },
              },
              "value": "Sozialpolitik und Sozialstaat: Soziologische Analysen",
            },
          ],
        },
        Object {
          "key": "date",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 19,
              "offset": 622,
            },
            "start": Object {
              "column": 1,
              "line": 18,
              "offset": 605,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 18,
                  "offset": 619,
                },
                "start": Object {
                  "column": 11,
                  "line": 18,
                  "offset": 615,
                },
              },
              "value": "2002",
            },
          ],
        },
        Object {
          "key": "doi",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 20,
              "offset": 662,
            },
            "start": Object {
              "column": 1,
              "line": 19,
              "offset": 622,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 38,
                  "line": 19,
                  "offset": 659,
                },
                "start": Object {
                  "column": 10,
                  "line": 19,
                  "offset": 631,
                },
              },
              "value": "10.1007/978-3-322-99962-7_11",
            },
          ],
        },
        Object {
          "key": "editor",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 21,
              "offset": 699,
            },
            "start": Object {
              "column": 1,
              "line": 20,
              "offset": 662,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 35,
                  "line": 20,
                  "offset": 696,
                },
                "start": Object {
                  "column": 13,
                  "line": 20,
                  "offset": 674,
                },
              },
              "value": "Kauffmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "langid",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 22,
              "offset": 720,
            },
            "start": Object {
              "column": 1,
              "line": 21,
              "offset": 699,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 21,
                  "offset": 717,
                },
                "start": Object {
                  "column": 13,
                  "line": 21,
                  "offset": 711,
                },
              },
              "value": "german",
            },
          ],
        },
        Object {
          "key": "origdate",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 23,
              "offset": 741,
            },
            "start": Object {
              "column": 1,
              "line": 22,
              "offset": 720,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 22,
                  "offset": 738,
                },
                "start": Object {
                  "column": 15,
                  "line": 22,
                  "offset": 734,
                },
              },
              "value": "1997",
            },
          ],
        },
        Object {
          "key": "pages",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 24,
              "offset": 763,
            },
            "start": Object {
              "column": 1,
              "line": 23,
              "offset": 741,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 23,
                  "offset": 760,
                },
                "start": Object {
                  "column": 12,
                  "line": 23,
                  "offset": 752,
                },
              },
              "value": "241–260",
            },
          ],
        },
        Object {
          "key": "publisher",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 25,
              "offset": 817,
            },
            "start": Object {
              "column": 1,
              "line": 24,
              "offset": 763,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 52,
                  "line": 24,
                  "offset": 814,
                },
                "start": Object {
                  "column": 16,
                  "line": 24,
                  "offset": 778,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 51,
                      "line": 24,
                      "offset": 813,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 24,
                      "offset": 779,
                    },
                  },
                  "value": "VS Verlag für Sozialwissenschaften",
                },
              ],
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 26,
              "offset": 884,
            },
            "start": Object {
              "column": 1,
              "line": 25,
              "offset": 817,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 65,
                  "line": 25,
                  "offset": 881,
                },
                "start": Object {
                  "column": 12,
                  "line": 25,
                  "offset": 828,
                },
              },
              "value": "Schwindet die integrative Funktion des Sozialstaates?",
            },
          ],
        },
        Object {
          "key": "url",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 27,
              "offset": 956,
            },
            "start": Object {
              "column": 1,
              "line": 26,
              "offset": 884,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 71,
                  "line": 26,
                  "offset": 954,
                },
                "start": Object {
                  "column": 10,
                  "line": 26,
                  "offset": 893,
                },
              },
              "value": "http://link.springer.com/chapter/10.1007/978-3-322-99962-7_11",
            },
          ],
        },
      ],
      "type": "incollection",
    },
  ],
  "kind": "File",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 28,
      "offset": 958,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`BibTeX Parser should parse Ignoring upper cases in German titles #456-export to an AST 2`] = `
Object {
  "children": Array [
    Object {
      "id": "Kaufmann1990",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 12,
          "offset": 379,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 64,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 30,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 34,
                  "line": 2,
                  "offset": 61,
                },
                "start": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 40,
                },
              },
              "value": "Kaufmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "booktitle",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 137,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 64,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 71,
                  "line": 3,
                  "offset": 134,
                },
                "start": Object {
                  "column": 16,
                  "line": 3,
                  "offset": 79,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 70,
                      "line": 3,
                      "offset": 133,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 3,
                      "offset": 80,
                    },
                  },
                  "value": "Sozialpolitik und Sozialstaat: Soziologische Analysen",
                },
              ],
            },
          ],
        },
        Object {
          "key": "doi",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 5,
              "offset": 176,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 137,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 37,
                  "line": 4,
                  "offset": 173,
                },
                "start": Object {
                  "column": 10,
                  "line": 4,
                  "offset": 146,
                },
              },
              "value": "10.1007/978-3-322-99962-7_7",
            },
          ],
        },
        Object {
          "key": "editor",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 213,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 176,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 35,
                  "line": 5,
                  "offset": 210,
                },
                "start": Object {
                  "column": 13,
                  "line": 5,
                  "offset": 188,
                },
              },
              "value": "Kauffmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "pages",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 7,
              "offset": 235,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 213,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 6,
                  "offset": 232,
                },
                "start": Object {
                  "column": 12,
                  "line": 6,
                  "offset": 224,
                },
              },
              "value": "145–160",
            },
          ],
        },
        Object {
          "key": "publisher",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 8,
              "offset": 293,
            },
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 235,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 56,
                  "line": 7,
                  "offset": 290,
                },
                "start": Object {
                  "column": 16,
                  "line": 7,
                  "offset": 250,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 28,
                      "line": 7,
                      "offset": 262,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 7,
                      "offset": 251,
                    },
                  },
                  "value": "VS Verlag f",
                },
                Object {
                  "kind": "NestedLiteral",
                  "loc": Object {
                    "end": Object {
                      "column": 33,
                      "line": 7,
                      "offset": 267,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 7,
                      "offset": 262,
                    },
                  },
                  "value": Array [
                    Object {
                      "character": "u",
                      "kind": "DicraticalCommand",
                      "loc": Object {
                        "end": Object {
                          "column": 32,
                          "line": 7,
                          "offset": 266,
                        },
                        "start": Object {
                          "column": 29,
                          "line": 7,
                          "offset": 263,
                        },
                      },
                      "mark": "\\"",
                    },
                  ],
                },
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 55,
                      "line": 7,
                      "offset": 289,
                    },
                    "start": Object {
                      "column": 33,
                      "line": 7,
                      "offset": 267,
                    },
                  },
                  "value": "r Sozialwissenschaften",
                },
              ],
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 9,
              "offset": 353,
            },
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 293,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 58,
                  "line": 8,
                  "offset": 350,
                },
                "start": Object {
                  "column": 12,
                  "line": 8,
                  "offset": 304,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 34,
                      "line": 8,
                      "offset": 326,
                    },
                    "start": Object {
                      "column": 13,
                      "line": 8,
                      "offset": 305,
                    },
                  },
                  "value": "Sozialpolitik und Bev",
                },
                Object {
                  "kind": "NestedLiteral",
                  "loc": Object {
                    "end": Object {
                      "column": 39,
                      "line": 8,
                      "offset": 331,
                    },
                    "start": Object {
                      "column": 34,
                      "line": 8,
                      "offset": 326,
                    },
                  },
                  "value": Array [
                    Object {
                      "character": "o",
                      "kind": "DicraticalCommand",
                      "loc": Object {
                        "end": Object {
                          "column": 38,
                          "line": 8,
                          "offset": 330,
                        },
                        "start": Object {
                          "column": 35,
                          "line": 8,
                          "offset": 327,
                        },
                      },
                      "mark": "\\"",
                    },
                  ],
                },
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 52,
                      "line": 8,
                      "offset": 344,
                    },
                    "start": Object {
                      "column": 39,
                      "line": 8,
                      "offset": 331,
                    },
                  },
                  "value": "lkerungsproze",
                },
                Object {
                  "kind": "NestedLiteral",
                  "loc": Object {
                    "end": Object {
                      "column": 57,
                      "line": 8,
                      "offset": 349,
                    },
                    "start": Object {
                      "column": 52,
                      "line": 8,
                      "offset": 344,
                    },
                  },
                  "value": Array [
                    Object {
                      "arguments": Array [],
                      "kind": "RegularCommand",
                      "loc": Object {
                        "end": Object {
                          "column": 56,
                          "line": 8,
                          "offset": 348,
                        },
                        "start": Object {
                          "column": 53,
                          "line": 8,
                          "offset": 345,
                        },
                      },
                      "value": "ss",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "key": "year",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 376,
            },
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 353,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 22,
                  "line": 9,
                  "offset": 374,
                },
                "start": Object {
                  "column": 11,
                  "line": 9,
                  "offset": 363,
                },
              },
              "value": "[1990] 2002",
            },
          ],
        },
      ],
      "type": "incollection",
    },
    Object {
      "id": "Kaufmann1997",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 22,
          "offset": 767,
        },
        "start": Object {
          "column": 1,
          "line": 12,
          "offset": 379,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 14,
              "offset": 443,
            },
            "start": Object {
              "column": 3,
              "line": 13,
              "offset": 409,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 34,
                  "line": 13,
                  "offset": 440,
                },
                "start": Object {
                  "column": 13,
                  "line": 13,
                  "offset": 419,
                },
              },
              "value": "Kaufmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "booktitle",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 15,
              "offset": 516,
            },
            "start": Object {
              "column": 1,
              "line": 14,
              "offset": 443,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 71,
                  "line": 14,
                  "offset": 513,
                },
                "start": Object {
                  "column": 16,
                  "line": 14,
                  "offset": 458,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 70,
                      "line": 14,
                      "offset": 512,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 14,
                      "offset": 459,
                    },
                  },
                  "value": "Sozialpolitik und Sozialstaat: Soziologische Analysen",
                },
              ],
            },
          ],
        },
        Object {
          "key": "doi",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 16,
              "offset": 556,
            },
            "start": Object {
              "column": 1,
              "line": 15,
              "offset": 516,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 38,
                  "line": 15,
                  "offset": 553,
                },
                "start": Object {
                  "column": 10,
                  "line": 15,
                  "offset": 525,
                },
              },
              "value": "10.1007/978-3-322-99962-7_11",
            },
          ],
        },
        Object {
          "key": "editor",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 17,
              "offset": 593,
            },
            "start": Object {
              "column": 1,
              "line": 16,
              "offset": 556,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 35,
                  "line": 16,
                  "offset": 590,
                },
                "start": Object {
                  "column": 13,
                  "line": 16,
                  "offset": 568,
                },
              },
              "value": "Kauffmann, Franz-Xaver",
            },
          ],
        },
        Object {
          "key": "pages",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 18,
              "offset": 615,
            },
            "start": Object {
              "column": 1,
              "line": 17,
              "offset": 593,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 17,
                  "offset": 612,
                },
                "start": Object {
                  "column": 12,
                  "line": 17,
                  "offset": 604,
                },
              },
              "value": "241–260",
            },
          ],
        },
        Object {
          "key": "publisher",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 19,
              "offset": 673,
            },
            "start": Object {
              "column": 1,
              "line": 18,
              "offset": 615,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 56,
                  "line": 18,
                  "offset": 670,
                },
                "start": Object {
                  "column": 16,
                  "line": 18,
                  "offset": 630,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 28,
                      "line": 18,
                      "offset": 642,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 18,
                      "offset": 631,
                    },
                  },
                  "value": "VS Verlag f",
                },
                Object {
                  "kind": "NestedLiteral",
                  "loc": Object {
                    "end": Object {
                      "column": 33,
                      "line": 18,
                      "offset": 647,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 18,
                      "offset": 642,
                    },
                  },
                  "value": Array [
                    Object {
                      "character": "u",
                      "kind": "DicraticalCommand",
                      "loc": Object {
                        "end": Object {
                          "column": 32,
                          "line": 18,
                          "offset": 646,
                        },
                        "start": Object {
                          "column": 29,
                          "line": 18,
                          "offset": 643,
                        },
                      },
                      "mark": "\\"",
                    },
                  ],
                },
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 55,
                      "line": 18,
                      "offset": 669,
                    },
                    "start": Object {
                      "column": 33,
                      "line": 18,
                      "offset": 647,
                    },
                  },
                  "value": "r Sozialwissenschaften",
                },
              ],
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 20,
              "offset": 742,
            },
            "start": Object {
              "column": 1,
              "line": 19,
              "offset": 673,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 67,
                  "line": 19,
                  "offset": 739,
                },
                "start": Object {
                  "column": 12,
                  "line": 19,
                  "offset": 684,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 66,
                      "line": 19,
                      "offset": 738,
                    },
                    "start": Object {
                      "column": 13,
                      "line": 19,
                      "offset": 685,
                    },
                  },
                  "value": "Schwindet die integrative Funktion des Sozialstaates?",
                },
              ],
            },
          ],
        },
        Object {
          "key": "year",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 21,
              "offset": 765,
            },
            "start": Object {
              "column": 1,
              "line": 20,
              "offset": 742,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 22,
                  "line": 20,
                  "offset": 763,
                },
                "start": Object {
                  "column": 11,
                  "line": 20,
                  "offset": 752,
                },
              },
              "value": "[1997] 2002",
            },
          ],
        },
      ],
      "type": "incollection",
    },
  ],
  "kind": "File",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 22,
      "offset": 767,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;
